Проект готов к проверке №1, v0.1

--- a/src/old/index.html
+++ b/src/old/index.html
@@ -66,14 +66,15 @@
     </div>
 
 
-<!-- Попап для формы редактирования avatar -->
+    <!-- Попап для формы редактирования avatar -->
     <div class="popup popup-edit-avatar">
       <form class="form form_edit-avatar" name="formEditAvatar" method="get" novalidate>
         <h2 class="form__title">Обновить аватар</h2>
         <div class="form__inputs">
 
           <div class="form__input-element">
-            <input class="form__input" id="avatar-link-input" type="url" name="avatarLinkInput" placeholder="Ссылка на картинку" required>
+            <input class="form__input" id="avatar-link-input" type="url" name="avatarLinkInput"
+              placeholder="Ссылка на картинку" required>
             <span class="form__input-error" id="avatar-link-input-error"></span>
           </div>
 
